--- a/Article/users/templates/users/register.html
+++ b/Article/users/templates/users/register.html
@@ -148,7 +148,7 @@
     </div>
 
     <div class="container">
-        <h2>User Registration</h2>
+        <h2>ArticleUser Registration</h2>
         <form id="registration-form">
             <div class="form-group">
                 <label for="first_name">First Name</label>
